--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react": "*",
     "react-dom": "*",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "styled-components": "*"
