data statique et génération de slug

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "slugify": "^1.3.6",
     "styled-components": "*"
   }
 }
