setup initial des tests + 1er exemple

--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@babel/plugin-proposal-object-rest-spread": "*",
     "@babel/preset-env": "*",
     "@babel/preset-react": "*",
+    "@babel/register": "^7.8.3",
     "babel-eslint": "*",
     "babel-loader": "^8",
     "bundle-stats": "*",
+    "chai": "^4.2.0",
     "clean-webpack-plugin": "*",
     "copy-webpack-plugin": "*",
     "cross-env": "*",
     "css-loader": "*",
     "cssnano": "*",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "*",
     "eslint-config-airbnb": "*",
     "eslint-import-resolver-alias": "*",
@@ -31,7 +35,9 @@
     "eslint-plugin-react-hooks": "*",
     "file-loader": "*",
     "html-webpack-plugin": "*",
+    "ignore-styles": "^5.0.1",
     "mini-css-extract-plugin": "*",
+    "mocha": "^7.0.1",
     "optimize-css-assets-webpack-plugin": "*",
     "postcss-loader": "*",
     "postcss-preset-env": "*",
