--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "lint": "eslint src/**/*.js",
     "lint:fix": "eslint --fix src/**/*.js",
     "clean": "rm -rf dist",
-    "clean:all": "rm -rf dist node_modules yarn.lock package-lock.json"
+    "clean:all": "rm -rf dist node_modules yarn.lock package-lock.json",
+    "test": "NODE_PATH=./ mocha --require tests/.setup.js tests/**/*.test.js",
+    "test:watch": "NODE_PATH=./ mocha --watch --require tests/.setup.js tests/**/*.test.js"
   },
   "devDependencies": {
     "@babel/core": "*",
