--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "prop-types": "*",
     "react": "*",
     "react-dom": "*",
+    "react-feather": "^2.0.3",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
